[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/gear_background/gears_animated_texture.tres" type="Texture" id=1]
[ext_resource path="res://Scenes/MainMenu/New Game.gd" type="Script" id=2]
[ext_resource path="res://Scenes/MainMenu/Exit.gd" type="Script" id=3]
[ext_resource path="res://theme/digit_theme.tres" type="Theme" id=4]
[ext_resource path="res://Scripts/ChangeMenuButton.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainMenu/FullScreenButton.gd" type="Script" id=6]
[ext_resource path="res://Scenes/MainMenu/Options.gd" type="Script" id=7]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
margin_top = 100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuLabel" type="Label" parent="MainMenu"]
margin_right = 409.0
margin_bottom = 28.0
text = "Digit Game"
align = 1

[node name="Spacer" type="Control" parent="MainMenu"]
margin_top = 32.0
margin_right = 409.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 10 )

[node name="NewGameButton" type="Button" parent="MainMenu"]
margin_top = 46.0
margin_right = 409.0
margin_bottom = 80.0
text = "Start Game"
script = ExtResource( 2 )

[node name="OptionsButton" type="Button" parent="MainMenu"]
margin_top = 84.0
margin_right = 409.0
margin_bottom = 118.0
text = "Options"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
from_path = NodePath("..")
to_path = NodePath("../../Options")

[node name="CreditsButton" type="Button" parent="MainMenu"]
margin_top = 122.0
margin_right = 409.0
margin_bottom = 156.0
text = "Credits"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
from_path = NodePath("..")
to_path = NodePath("../../Credits")

[node name="ExitButton" type="Button" parent="MainMenu"]
margin_top = 160.0
margin_right = 409.0
margin_bottom = 194.0
text = "Exit"
script = ExtResource( 3 )

[node name="Options" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
margin_top = 100.0
margin_bottom = -100.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options Label" type="Label" parent="Options"]
margin_right = 409.0
margin_bottom = 28.0
text = "Options"

[node name="FullScreenButton" type="Button" parent="Options"]
margin_top = 32.0
margin_right = 409.0
margin_bottom = 66.0
text = "Toggle Fullscreen"
script = ExtResource( 6 )

[node name="MainMenuButton" type="Button" parent="Options"]
margin_top = 70.0
margin_right = 409.0
margin_bottom = 104.0
text = "Main Menu"
script = ExtResource( 5 )
from_path = NodePath("..")
to_path = NodePath("../../MainMenu")

[node name="VolumeLabel" type="Label" parent="Options"]
margin_top = 108.0
margin_right = 409.0
margin_bottom = 136.0
text = "Volume"

[node name="MasterVolumeInfo" type="MarginContainer" parent="Options"]
margin_top = 140.0
margin_right = 409.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="Options/MasterVolumeInfo"]
margin_right = 409.0
margin_bottom = 28.0
text = "Master"

[node name="MasterVolumeNumberLabel" type="Label" parent="Options/MasterVolumeInfo"]
margin_right = 409.0
margin_bottom = 28.0
text = "50"
align = 2

[node name="MasterVolumeHSlider" type="HSlider" parent="Options"]
margin_top = 172.0
margin_right = 409.0
margin_bottom = 188.0
min_value = -30.0
max_value = 30.0
step = 3.0
tick_count = 20
ticks_on_borders = true

[node name="MusicVolumeInfo" type="MarginContainer" parent="Options"]
margin_top = 192.0
margin_right = 409.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeLabel" type="Label" parent="Options/MusicVolumeInfo"]
margin_right = 409.0
margin_bottom = 28.0
text = "Music"

[node name="MusicVolumeNumberLabel" type="Label" parent="Options/MusicVolumeInfo"]
margin_right = 409.0
margin_bottom = 28.0
text = "50"
align = 2

[node name="MusicVolumeHSlider" type="HSlider" parent="Options"]
margin_top = 224.0
margin_right = 409.0
margin_bottom = 240.0
min_value = -30.0
max_value = 30.0
step = 3.0
tick_count = 20
ticks_on_borders = true

[node name="Credits" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.3
anchor_right = 0.7
anchor_bottom = 1.0
margin_top = 100.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Credits"]
margin_right = 40.0
margin_bottom = 28.0
text = "Credits

Game by Digit

Sounds-
	 SoundEffectsFactory
	
Music-
	"

[node name="MainMenuButton" type="Button" parent="Credits"]
margin_right = 192.0
margin_bottom = 34.0
text = "Main Menu"
script = ExtResource( 5 )
from_path = NodePath("..")
to_path = NodePath("../../MainMenu")
